fixed layout issue

--- a/src/component/LexPage/LexPage.scss
+++ b/src/component/LexPage/LexPage.scss
@@ -16,8 +16,8 @@
       text-align: center;
       width: 100%;
       .card {
-        max-width: 90%;
-        margin: auto;
+        max-width: 100%;
+        margin: 24px auto;
       }
     }
   }
